# clang-exar-testing

./: .gitignore  CMakeLists.txt  NoLowerCaseClassNames.cpp  PrintFunctionNames.cpp  README.md  README.txt  test.cc
cmake/: FindClang.cmake  FindEztest.cmake  FindLit.cmake  Findllvm-config.cmake
exar-lower/include/: LocalConsumer.h
exar-lower/source/: LocalASTAction.cc  LocalVisitor.cc
lib/: eztest
plugins/: CMakeLists.txt
plugins/exar-lower/: CMakeLists.txt
plugins/exar-lower/include/: LocalASTAction.h  LocalVisitor.h
plugins/exar-lower/source/: LocalConsumer.cc  main.cc
plugins/exar-lower/test/test-basic/: infile.cc  outfile.txt
print-fns/: CMakeLists.txt
